--- a/addBook.xaml
+++ b/addBook.xaml
@@ -5,25 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:library"
         mc:Ignorable="d"
-        Title="addBook" Height="750" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None">
+        Title="addBook" Height="1050" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid Background="#FFC5D0E6">
-        <Button Width="100" Height="30" FontFamily="Century Gothic" Margin="370,-700,0,0" Click="mainMenu" >Главное меню</Button>
-        <Button Width="35" Height="40" Margin="700,-700,0,0" Click="close" FontSize="30" Foreground="#FF565656" Background="#FFC5D0E6" BorderBrush="#FFC5D0E6" >X</Button>
-        <Button Width="35" Height="40" Margin="600,-700,0,0" Click="min" FontSize="30" Foreground="#FF565656" Background="#FFC5D0E6" BorderBrush="#FFC5D0E6" >-</Button>
-        <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,-670,0,0" FontSize="25">Название книги</Label>
-        <TextBox Name="bookNameTextBox" Width="500" FontSize="25" Height="40" Margin="-120,-580,0,0"></TextBox>
-        <Label  Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,-430,0,0" FontSize="25">Издатель</Label>
-        <TextBox Name="isdatelBookTextBox" Width="500" FontSize="25" Height="40" Margin="-120,-340,0,0"></TextBox>
-        <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,-190,0,0" FontSize="25">Код книги</Label>
-        <TextBox Name="bookCodeTextBox" Width="500" FontSize="25" Height="40" Margin="-120,-100,0,0"></TextBox>
+        <Button Width="100" Height="30" FontFamily="Century Gothic" Margin="370,-1000,0,0" Click="mainMenu" >Главное меню</Button>
+        <Button Width="35" Height="40" Margin="700,-1000,0,0" Click="close" FontSize="30" Foreground="#FF565656" Background="#FFC5D0E6" BorderBrush="#FFC5D0E6" >X</Button>
+        <Button Width="35" Height="40" Margin="600,-1000,0,0" Click="min" FontSize="30" Foreground="#FF565656" Background="#FFC5D0E6" BorderBrush="#FFC5D0E6" >-</Button>
+        <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,-970,0,0" FontSize="25">Название книги</Label>
+        <TextBox Name="bookNameTextBox" Width="500" FontSize="25" Height="40" Margin="-120,-880,0,0"></TextBox>
+        <Label  Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,-730,0,0" FontSize="25">Автор</Label>
+        <TextBox Name="bookAuthorTextBox" Width="500" FontSize="25" Height="40" Margin="-120,-640,0,0"></TextBox>
+        <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,-450,0,0" FontSize="25">Код книги</Label>
+        <TextBox Name="bookCodeTextBox" Width="500" FontSize="25" Height="40" Margin="-120,-360,0,0"></TextBox>
 
 
-        <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,50,0,0" FontSize="25">Автор</Label>
-        <TextBox Name="bookAuthorTextBox" Width="500" FontSize="25" Height="40" Margin="-120,140,0,0"></TextBox>
+        <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,-180,0,0" FontSize="25">Издатель</Label>
+        <TextBox Name="isdatelBookTextBox" Width="500" FontSize="25" Height="40" Margin="-120,-90,0,0"></TextBox>
 
-        <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,290,0,0" FontSize="25">Кол-во книг</Label>
-        <TextBox Name="amountText" Width="500" FontSize="25" Height="40" Margin="-120,380,0,0"></TextBox>
-        <Button Width="150" Height="50" FontFamily="Century Gothic" Margin="0,632,25,32" Content="Готово" Click="addBookClick" FontSize="25" ></Button>
+        <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,80,0,0" FontSize="25">Категория (номер)</Label>
+        <TextBox Name="categoryText" Width="500" FontSize="25" Height="40" Margin="-120,170,0,0"></TextBox>
+
+        <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,360,0,0" FontSize="25">Язык</Label>
+        <ComboBox Name="langText" Width="500" Height="40" FontFamily="Century Gothic" FontSize="25" Margin="-120,450,0,0">
+            <ComboBoxItem Content="Русский"/>
+            <ComboBoxItem Content="Казахский"/>
+            <ComboBoxItem Content="Другой"/>
+        </ComboBox>
+
+        <Label Width="400" Height="40" FontFamily="Century Gothic" Margin="-220,640,0,0" FontSize="25">Кол-во книг</Label>
+        <TextBox Name="amountText" Width="500" FontSize="25" Height="40" Margin="-120,730,0,0"></TextBox>
+
+        
+        <Button Width="150" Height="50" FontFamily="Century Gothic" Margin="0,932,25,32" Content="Готово" Click="addBookClick" FontSize="25" ></Button>
 
     </Grid>
 </Window>
