--- a/BookList.xaml
+++ b/BookList.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:library"
         mc:Ignorable="d"
-        Title="List" Height="500"  Width="1600" WindowStartupLocation="CenterScreen"  WindowStyle="None" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalContentAlignment="Center">
-    <ScrollViewer CanContentScroll="True" VerticalAlignment="Center"  Width="1600" HorizontalAlignment="Stretch" Background="#FFC5D0E6">
+        Title="List" Height="500"  Width="1900" WindowStartupLocation="CenterScreen"  WindowStyle="None" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalContentAlignment="Center">
+    <ScrollViewer CanContentScroll="True" VerticalAlignment="Center"  Width="1900" HorizontalAlignment="Stretch" Background="#FFC5D0E6">
 
-        <StackPanel Orientation="Vertical"  HorizontalAlignment="Right" Width="1550" VerticalAlignment="Center" Background="#FFC5D0E6">
+        <StackPanel Orientation="Vertical" Width="1900" Background="#FFC5D0E6">
             <Button Width="35" Height="40" Margin="1000,10,0,0" FontSize="30" Foreground="#FF565656" Click="close" Background="#FFC5D0E6" BorderBrush="#FFC5D0E6">X</Button>
             <Button Width="35" Height="40" Margin="900,-35,0,0" FontSize="30" Foreground="#FF565656" Click="min" BorderBrush="#FFC5D0E6" Background="#FFC5D0E6">-</Button>
             <Button Name="backButton" Width="100" Height="50" Margin="-880,0,0,0" Click="mainMenu">Главное меню</Button>
@@ -17,21 +17,21 @@
             <Button Name="next" Width="204" Height="50" Margin="-420,-70,0,0" FontSize="20" Click="nextpage">Вперед</Button>
             <Button Name="prev" Width="204" Height="50" Margin="-1350,-70,0,0" FontSize="20" Click="previouspage">Назад</Button>
 
-            <Label Width="150"  FontSize="20" Margin="-1400,20,0,0" FontFamily="Century Gothic">Название</Label>
-            <Label Width="150"  FontSize="20" Margin="-930,-37,-35,-12" FontFamily="Century Gothic">Автор</Label>
-            <Label Width="100"  FontSize="20" Margin="-580,-37,-35,-12" FontFamily="Century Gothic">Код</Label>
-            <Label Width="300"  FontSize="20" Margin="80,-37,-35,-12" FontFamily="Century Gothic">Издатель</Label>
-            <Label Width="110"  FontSize="20" Margin="580,-37,-35,-12" FontFamily="Century Gothic">Доступно</Label>
-            <Label Width="128"  FontSize="20" Margin="930,-37,-35,-12" FontFamily="Century Gothic">У читателей</Label>
+            <Label Width="150"  FontSize="20" Margin="-1700,20,0,0" FontFamily="Century Gothic">Название</Label>
+            <Label Width="150"  FontSize="20" Margin="-1200,-37,-35,-12" FontFamily="Century Gothic">Автор</Label>
+            <Label Width="100"  FontSize="20" Margin="-880,-37,-35,-12" FontFamily="Century Gothic">Код</Label>
+            <Label Width="110"  FontSize="20" Margin="-410,-37,-35,-12" FontFamily="Century Gothic">Издатель</Label>
+            <Label Width="110"  FontSize="20" Margin="680,-37,-35,-12" FontFamily="Century Gothic">Доступно</Label>
+            <Label Width="128"  FontSize="20" Margin="1030,-37,-35,-12" FontFamily="Century Gothic">У читателей</Label>
             <StackPanel Name ="panel1" Height="50" Margin="0,50,0,0">
 
-                <Label Width="250" Name="Name1" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
-                <Label Width="200" Name="Author1" FontSize="20" Margin="-870,-37,-35,-12">aaa</Label>
-                <Label Width="230" Name="Code1" FontSize="20" Margin="-430,-37,-35,-12">aaa</Label>
-                <Label Width="300" Name="Pub1" FontSize="20" Margin="100,-37,-35,-12">aaa</Label>
-                <Label Width="120" Name="Avail1" FontSize="20" Margin="650,-37,-35,-12">aaa</Label>
-                <Label Width="120" Name="NAvail1" FontSize="20" Margin="970,-37,-35,-12">aaa</Label>
-                <Button Name="choose1" Width="100" Height="30" Margin="1270,-30,0,0" Content="Выбрать" Click="chooseBook"></Button>
+                <Label Width="250" Name="Name1" FontSize="20" Margin="-1600,0,0,0">aaa</Label>
+                <Label Width="200" Name="Author1" FontSize="20" Margin="-1170,-37,-35,-12">aaa</Label>
+                <Label Width="200" Name="Code1" FontSize="20" Margin="-780,-37,-35,-12">aaa</Label>
+                <Label Width="300" Name="Pub1" FontSize="20" Margin="-200,-37,-35,-12">aaa</Label>
+                <Label Width="120" Name="Avail1" FontSize="20" Margin="750,-37,-35,-12">aaa</Label>
+                <Label Width="120" Name="NAvail1" FontSize="20" Margin="1070,-37,-35,-12">aaa</Label>
+                <Button Name="choose1" Width="100" Height="30" Margin="1370,-30,0,0" Content="Выбрать" Click="chooseBook"></Button>
             </StackPanel>
             <StackPanel Name ="panel2" Height="50" Margin="0,0,0,0">
                 <Label Width="250" Name="Name2" FontSize="20" Margin="-1290,0,0,0">aaa</Label>
